dockerized backend with instructions in the README file

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-PORT=
+# DB credintials
 DB_HOST=
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
-JWT_SECRET=
-ADMIN_PASSWORD=
-IMAGE_MAX_COUNT=
-NODE_ENV=
-SERVER_URL=
-SSL=
+
+#This should be the Application IP with port where IP will be used by user to open website
+SERVER_URL=192.168.1.108:3000
+
+
+PORT=3000
+JWT_SECRET=kllkwfmkDlknmmsxmlnknkldax8554
+ADMIN_PASSWORD=123456
+IMAGE_MAX_COUNT=1
+NODE_ENV=production
+SSL=true
